--- a/docs/components/RetrySimulator/retry-simulator.module.css
+++ b/docs/components/RetrySimulator/retry-simulator.module.css
@@ -1,3 +1,101 @@
+.retrySimulator {
+  border: 0px;
+}
+
+.tr {
+  border: 0;
+  background-color: transparent !important;
+}
+
+.td {
+  border: 0;
+  padding-top: 0px !important;
+}
+
+.td:first-of-type {
+  padding-left: 0px !important;
+  width: 50%;
+}
+
+.scheduleTime {
+  padding: 10px;
+  padding-top: 15px;
+  border: 1px solid #ddd;
+  margin-bottom: 15px;
+  background-color: #f0f0f0;
+}
+
+.retry {
+  position: relative;
+  padding: 10px;
+  padding-top: 15px;
+  border: 1px solid #ddd;
+  margin-bottom: 15px;
+}
+
+.result {
+  padding: 5px;
+  text-align: center;
+  border-radius: 4px;
+}
+
+.resultText {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.success {
+  background-color: #D4EDDC;
+}
+
 .fail {
-  background-color: red;
+  background-color: #f8d7da;
+}
+
+.inputContainer {
+  width: 100%;
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.numberInputLabel {
+  float: left;
+  max-width: 69%;
+}
+
+.numberInput {
+  float: right;
+  max-width: 29%;
+}
+
+.removeRetry {
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  line-height: 1em;
+}
+
+.parameter {
+  padding: 10px;
+  padding-top: 15px;
+  border: 1px solid #ddd;
+  margin-bottom: 15px;
+}
+
+.slider {
+  width: 100%;
+  background: #d3d3d3;
+  height: 10px;
+  border-radius: 5px;
+}
+
+.codeOutputWrap {
+  vertical-align: top;
+}
+
+.codeOutput {
+  font-family: monospace;
+  width: 100%;
+  height: 7em;
 }
