Add comment to determine end of tailwind shenanigans

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -246,6 +246,7 @@ main.max-w-screen-lg {
   background-color: var(--ifm-card-background-color);
   padding: 1.25rem;
 }
+/* End Crazy Tailwind hax */
 
 @font-face {
   font-family: "Aeonik";
