--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -299,3 +299,6 @@ main.max-w-screen-lg {
   padding-top: 15px;
   padding-bottom: 15px;
 }
+.menu__link, .navbar__link, .dropdown__link{
+    font-weight: 400;
+}
