--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -299,6 +299,8 @@ main.max-w-screen-lg {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-.menu__link, .navbar__link, .dropdown__link{
-    font-weight: 400;
+.menu__link,
+.navbar__link,
+.dropdown__link {
+  font-weight: 400;
 }
