--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,11 +20,10 @@
   /* --doc-sidebar-width: 275px !important;
   --ifm-link-hover-decoration: none;
   --ifm-link-hover-color: inherit; */
-
 }
 
 html[data-theme="dark"] {
-  --ifm-color-primary: #BFDBFE;
+  --ifm-color-primary: #bfdbfe;
   --ifm-background-color: #141414;
   --ifm-footer-background-color: #000000;
   --ifm-navbar-background-color: #000000;
@@ -47,7 +46,7 @@ html[data-theme="dark"] {
 }
 
 html[data-theme="light"] {
-  --ifm-color-primary: #1D4ED8;
+  --ifm-color-primary: #1d4ed8;
   --ifm-background-color: #f9fafb;
   --ifm-footer-background-color: #ffffff;
   --ifm-navbar-background-color: #ffffff;
@@ -68,13 +67,13 @@ html[data-theme="light"] {
   --ifm-card-background-color: #ffffff;
   --ifm-badge-background-color: rgba(239, 246, 255); */
   --card-color: #ffffff;
-
 }
 
-  /* --ifm-background-surface-color: #000000;
+/* --ifm-background-surface-color: #000000;
   --ifm-footer-link-color */
 
-a, a:hover {
+a,
+a:hover {
   text-decoration: underline;
 }
 
@@ -305,7 +304,10 @@ main.max-w-screen-lg {
   font-display: swap;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-family: "Poppins";
 }
 /* p {
@@ -334,9 +336,14 @@ h1, h2, h3, h4 {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-.menu__link, .navbar__link, .dropdown__link{
-    font-weight: 400;
+.menu__link,
+.navbar__link,
+.dropdown__link {
+  font-weight: 400;
 }
-.menu__link, .navbar__link, .dropdown__link, .table-of-contents__link{
-    text-decoration: none;
+.menu__link,
+.navbar__link,
+.dropdown__link,
+.table-of-contents__link {
+  text-decoration: none;
 }
