removing mdx because spaces weren't allowed in titles

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -286,7 +286,7 @@ main.max-w-screen-lg {
 }
 
 .landing-page-book {
-  height: 2.2rem;;
+  height: 2.2rem;
   width: 2.2rem;
   margin: 0;
   padding-top: 1 rem;
@@ -294,7 +294,7 @@ main.max-w-screen-lg {
   padding-right: 1rem;
 }
 .landing-page-hat {
-  height: 2.2rem;;
+  height: 2.2rem;
   width: 2.2rem;
   margin: 0;
   padding-top: 1 rem;
