--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -134,6 +134,22 @@ main.p-6,
 .tailwindcss .rounded-lg {
   border-radius: 0.5rem;
 }
+
+.tailwindcss .mb-0 {
+  margin-bottom: 0;
+}
+
+.tailwindcss .mb-1 {
+  margin-bottom: 0.25;
+}
+
+.tailwindcss .mt-1 {
+  margin-top: 0.25;
+}
+
+.tailwindcss .mb-2 {
+  margin-bottom: 0.5;
+}
 .tailwindcss .mb-4 {
   margin-bottom: 1rem;
 }
@@ -148,17 +164,18 @@ main.p-6,
   margin-bottom: 2.5rem;
   margin-top: 2.5rem;
 }
-.tailwindcss .h-10 {
-  height: 2.5rem;
-}
-.tailwindcss .w-10 {
-  width: 2.5rem;
-}
 .tailwindcss .h-16 {
   height: 4rem;
 }
 .tailwindcss .w-16 {
   width: 4rem;
+}
+
+.tailwindcss .h-10 {
+  height: 2.5rem;
+}
+.tailwindcss .w-10 {
+  width: 2.5rem;
 }
 
 .tailwindcss .h-8 {
@@ -173,6 +190,13 @@ main.p-6,
 }
 .tailwindcss .w-7 {
   width: 1.75rem;
+}
+
+.tailwindcss .h-4 {
+  height: 1rem;
+}
+.tailwindcss .w-4 {
+  width: 4rem;
 }
 
 .tailwindcss .pl-1 {
@@ -216,7 +240,6 @@ main.p-6,
   margin-top: calc(0.75rem * (1 - var(--tw-space-y-reverse)));
 }
 .tailwindcss p {
-  margin: 0;
 }
 
 main.max-w-screen-lg {
@@ -255,6 +278,95 @@ main.max-w-screen-lg {
     line-height: 2.5rem;
   }
 }
+/* End Crazy Tailwind hax */
+
+@font-face {
+  font-family: "Aeonik";
+  src: url("../fonts/Aeonik/Aeonik-Regular.woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Aeonik-Bold";
+  src: url("../fonts/Aeonik/Aeonik-Bold.woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Aeonik-Light";
+  src: url("../fonts/Aeonik/Aeonik-Light.woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins/Poppins-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins/Poppins-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins/Poppins-SemiBold.ttf");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins/Poppins-Bold.ttf");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Poppins";
+}
+
+h1 {
+  font-weight: 600;
+  font-size: 6rem;
+  letter-spacing: -2px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 2.5rem;
+  letter-spacing: -2px;
+}
+
+p {
+  font-family: "Aeonik";
+  font-size: 0.875rem;
+  font-weight: 400;
+}
+
+a {
+  font-family: "Aeonik";
+  font-size: 0.875rem;
+  font-weight: 400;
+  margin-bottom: 0.25rem;
+}
 
 .navbar__logo img {
   height: 35px;
@@ -268,17 +380,26 @@ main.max-w-screen-lg {
 
 .landing-card-list {
   padding-bottom: 1.5em;
-  margin-right: 1.5em;
-  width: 15em;
+  margin-right: 2.5em;
+  /* width: 15em; */
   display: inline-block;
+}
+
+.landing-card-h2 {
+  margin-top: 3.25rem;
 }
 
 .landing-card-list-b {
+  display: flex;
+  padding-right: 1.5em;
 }
 
-.landing-card-list-b li {
-  display: inline-block;
-  padding-right: 1.5em;
+.logos {
+  margin-bottom: 2.5rem;
+}
+
+.list-logo {
+  padding-left: 1rem;
 }
 
 .landing-card-list li {
@@ -322,7 +443,7 @@ main.max-w-screen-lg {
 }
 .landing-card-p {
   /* font-style: italic; */
-  margin-bottom: 1em;
+  margin-bottom: 1.5rem;
 }
 
 .code-logo-list {
@@ -337,64 +458,6 @@ main.max-w-screen-lg {
 }
 .bold {
   font-weight: 500;
-}
-/* End Crazy Tailwind hax */
-
-@font-face {
-  font-family: "Aeonik";
-  src: url("../fonts/Aeonik/Aeonik-Regular.woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Aeonik-Bold";
-  src: url("../fonts/Aeonik/Aeonik-Bold.woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Aeonik-Light";
-  src: url("../fonts/Aeonik/Aeonik-Light.woff");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Poppins";
-  src: url("../fonts/Poppins/Poppins-Regular.ttf");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Poppins";
-}
-
-h1 {
-  font-weight: 700;
-  font-size: 6rem;
-  letter-spacing: -2px;
-}
-
-h2 {
-  font-weight: 700;
-  font-size: 2.5rem;
-  letter-spacing: -2px;
-}
-
-p {
-  font-family: "Aeonik";
-  font-size: 0.875rem;
-  font-weight: 400;
 }
 
 .menu__link {
@@ -423,6 +486,29 @@ p {
   padding: 0 0.5rem;
 }
 
+.aside {
+  color: #2563eb;
+  background-color: #eff6ff;
+  border-width: 1px;
+  border-radius: 0.5rem;
+  border-color: #2563eb;
+  border-style: solid;
+  padding: 2rem;
+}
+
+.aside-svg {
+  display: flex;
+  margin-right: 0.5rem;
+}
+
+.aside-head {
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+}
+
+.aside-link {
+  color: #2563eb;
+}
 /* Leadership page css */
 
 .leadership-container {
