--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -514,7 +514,7 @@ h1 {
   border-radius: 0.5rem;
   border-color: #2563eb;
   border-style: solid;
-  padding: 2rem;
+  padding: 1.5rem 1.5rem 0.5rem 1.5rem;
   font-family: "Aeonik";
   font-size: 0.875rem;
   font-weight: 400;
