--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -503,7 +503,7 @@ h1 {
   color: #1d4ed8;
   background-color: #dbeafe;
   border-radius: 0.125rem;
-  margin: 1rem;
+  margin: 2.5rem 1.5rem 0rem 1.5rem;
   padding: 0 0.5rem;
 }
 
