--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -347,6 +347,7 @@ h1 {
   font-size: 2rem;
   font-weight: 600;
   letter-spacing: -2px;
+  line-height: 90%;
 }
 
 @media only screen and (min-width: 1590px) {
@@ -371,7 +372,7 @@ h1 {
   font-weight: 600;
   font-size: 2.5rem;
   letter-spacing: -2px;
-  margin-top: 2.5rem;
+  /* margin-top: 2.5rem; */
 }
 
 .p-landing {
@@ -413,8 +414,13 @@ h1 {
   padding-right: 1.5em;
 }
 
+.supported-tech {
+  position: relative;
+  top: -0.75%;
+}
+
 .logos {
-  margin-bottom: 2.5rem;
+  /* margin-bottom: 2.5rem; */
 }
 
 .list-logo {
@@ -517,7 +523,7 @@ h1 {
   border-radius: 0.5rem;
   border-color: #2563eb;
   border-style: solid;
-  padding: 1.5rem 1.5rem 0.5rem 1.5rem;
+  padding: 1rem 1.5rem 0rem 1.5rem;
   font-family: "Aeonik";
   font-size: 0.875rem;
   font-weight: 400;
