Revert "Feature/add gtm plugin (#1214)"
This reverts commit 1e3f7c046d1fe6dd7fa656e44b923c8cb6abc37a.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -321,7 +321,7 @@ main.max-w-screen-lg {
   margin-bottom: 0.4rem;
 }
 .landing-card-p {
-  /* font-style: italic; */
+  font-style: italic;
   margin-bottom: 1em;
 }
 
@@ -378,25 +378,6 @@ h3,
 h4 {
   font-family: "Poppins";
 }
-
-h1 {
-  font-weight: 700;
-  font-size: 6rem;
-  letter-spacing: -2px;
-}
-
-h2 {
-  font-weight: 700;
-  font-size: 2.5rem;
-  letter-spacing: -2px;
-}
-
-p {
-  font-family: "Aeonik";
-  font-size: 0.875rem;
-  font-weight: 400;
-}
-
 .menu__link {
   font-family: "Aeonik";
 }
