--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -562,6 +562,12 @@ h1 {
 }
 /* Leadership page css */
 
+.main-subhead {
+  font-size: 24px;
+  position: relative;
+  top: -1.05%;
+}
+
 .leadership-container {
   max-width: 800px;
   margin: auto;
