--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -679,3 +679,38 @@ h1 {
 .nowrap {
   white-space: nowrap;
 }
+
+.tdiw {
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  background-color: #ffffff;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+}
+
+.tditw {
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.tdit {
+  font-size: 1.1em;
+  color: #141414;
+}
+
+.tdiiw {
+  margin: 0 auto;
+  padding: 15px;
+  text-align: center;
+  overflow: none;
+}
+
+.tdi {
+  max-width: 800px;
+  padding: 0;
+  margin: 0 auto;
+}
